--- a/youtube_summarizer/pyproject.toml
+++ b/youtube_summarizer/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 reflex = "^0.5.9"
 numpy = "<2"
 reflex-motion = "^0.0.1"
+yt-dlp = "^2024.8.6"
+nltk = "3.6.5"
 
 
 [build-system]
