--- a/youtube_summarizer/pyproject.toml
+++ b/youtube_summarizer/pyproject.toml
@@ -9,10 +9,18 @@ readme = "README.md"
 python = "^3.11"
 reflex = "^0.5.9"
 numpy = "<2"
-reflex-motion = "^0.0.1"
-yt-dlp = "^2024.8.6"
 nltk = "3.6.5"
+yt-dlp = "^2024.8.6"
+reflex-motion = "^0.0.1"
+transformers = "^4.44.1"
+accelerate = "^0.33.0"
+openai-whisper = {git = "https://github.com/openai/whisper.git"}
+websockets = "^13.0"
+uuid = "^1.30"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
