--- a/YouTube-Summarizer/pyproject.toml
+++ b/YouTube-Summarizer/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["jkusnierz01 <jedrek33@onet.pl>"]
 readme = "README.md"
+package-mode = false  # Disable packaging mode
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -18,9 +19,6 @@ openai-whisper = {git = "https://github.com/openai/whisper.git"}
 websockets = "^13.0"
 uuid = "^1.30"
 
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
