--- a/YouTube-Summarizer/pyproject.toml
+++ b/YouTube-Summarizer/pyproject.toml
@@ -8,17 +8,22 @@ package-mode = false  # Disable packaging mode
 
 [tool.poetry.dependencies]
 python = "^3.11"
-reflex = "^0.5.9"
 numpy = "<2"
 nltk = "3.6.5"
-yt-dlp = "^2024.8.6"
-reflex-motion = "^0.0.1"
-transformers = "^4.44.1"
 accelerate = "^0.33.0"
-openai-whisper = {git = "https://github.com/openai/whisper.git"}
 websockets = "^13.0"
-uuid = "^1.30"
 
+
+[tool.poetry.group.fastapi.dependencies]
+openai-whisper = {git = "https://github.com/openai/whisper.git"}
+uuid = "^1.30"
+yt-dlp = "^2024.8.6"
+fastapi = "0.110.1"
+uvicorn = "^0.22.0"
+
+[tool.poetry.group.reflex.dependencies]
+reflex = "^0.5.9"
+reflex-motion = "^0.0.1"
 
 [build-system]
 requires = ["poetry-core"]
