Dockerfiles and llm base

--- a/YouTube-Summarizer/fastapi/Dockerfile
+++ b/YouTube-Summarizer/fastapi/Dockerfile
@@ -2,17 +2,17 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-RUN apt-get update && apt-get install -y ffmpeg
-
 COPY ../pyproject.toml ../poetry.lock /code/
 
 RUN pip install poetry && \
-    poetry install --only fastapi
+    poetry install
+
+RUN apt-get update && apt-get install -y ffmpeg
 
 COPY ./fastapi/app /code/app
 
 WORKDIR /code/app/
 
-CMD ["poetry","run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80" ]
+EXPOSE 8080
 
-
+CMD ["poetry","run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
