--- a/YouTube-Summarizer/pyproject.toml
+++ b/YouTube-Summarizer/pyproject.toml
@@ -13,6 +13,7 @@ nltk = "3.6.5"
 accelerate = "^0.33.0"
 websockets = "^13.0"
 torch = "^2.4.1"
+huggingface-hub = "^0.24.7"
 
 
 [tool.poetry.group.fastapi.dependencies]
