--- a/YouTube-Summarizer/fastapi/Dockerfile
+++ b/YouTube-Summarizer/fastapi/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-COPY ../pyproject.toml ../poetry.lock /code/
+COPY ./pyproject.toml ./poetry.lock /code/
 
 RUN pip install poetry && \
     poetry install
