--- a/YouTube-Summarizer/docker-compose.yml
+++ b/YouTube-Summarizer/docker-compose.yml
@@ -15,8 +15,6 @@ services:
       dockerfile: ./backend/Dockerfile
     ports:
       - "8080:8080"
-    mem_limit: 8g
-    cpus: "2.0"
     environment:
       - HUGGING_FACE_TOKEN
     networks:
@@ -26,7 +24,7 @@ services:
     ports:
       - "4000:7000"
     volumes:
-      - /Users/jedrzejkusnierz/Desktop/programowanie/repozytoria/YouTube-Summarizer/YouTube-Summarizer/llm/models/llama-2-7b-chat.Q5_K_M.gguf:/models/llama-2-7b-chat.Q5_K_M.gguf
+      - ./llm/models/llama-2-7b-chat.Q5_K_M.gguf:/models/llama-2-7b-chat.Q5_K_M.gguf
     command: [
       "-m", "/models/llama-2-7b-chat.Q5_K_M.gguf",
       "--port", "7000",
