--- a/YouTube-Summarizer/backend/Dockerfile
+++ b/YouTube-Summarizer/backend/Dockerfile
@@ -1,13 +1,13 @@
 FROM python:3.11-slim
 
+RUN apt-get update && \
+    apt-get install -y build-essential g++ git ffmpeg
+
 WORKDIR /code
 
-COPY ./pyproject.toml ./poetry.lock /code/
+COPY ./backend/requirements-backend.txt /code/
 
-RUN pip install poetry && \
-    poetry install
-
-RUN apt-get update && apt-get install -y ffmpeg
+RUN pip install --no-cache-dir -r requirements-backend.txt
 
 COPY ./backend/app /code/app
 
@@ -15,4 +15,4 @@ WORKDIR /code/app/
 
 EXPOSE 8080
 
-CMD ["poetry","run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
