--- a/YouTube-Summarizer/pyproject.toml
+++ b/YouTube-Summarizer/pyproject.toml
@@ -14,16 +14,17 @@ accelerate = "^0.33.0"
 websockets = "^13.0"
 torch = "^2.4.1"
 huggingface-hub = "^0.24.7"
-pydub = "^0.25.1"
 
 
-[tool.poetry.group.fastapi.dependencies]
+[tool.poetry.group.backend.dependencies]
 openai-whisper = {git = "https://github.com/openai/whisper.git"}
 uuid = "^1.30"
 yt-dlp = "^2024.8.6"
 fastapi = "0.110.1"
 uvicorn = "^0.22.0"
-pyannote-audio = "^3.3.2"
+pyannote-audio = "^3.1.1"
+whisperx = {git = "https://github.com/m-bain/whisperx.git"}
+ctc-forced-aligner = {git = "https://github.com/MahmoudAshraf97/ctc-forced-aligner.git"}
 
 [tool.poetry.group.reflex.dependencies]
 reflex = "^0.5.9"
