--- a/YouTube-Summarizer/docker-compose.yml
+++ b/YouTube-Summarizer/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   frontend:
     build:
@@ -29,7 +28,7 @@ services:
     networks:
       - app-network
   llm:
-    image: ghcr.io/ggerganov/llama.cpp:server
+    image: ghcr.io/ggerganov/llama.cpp:server-cuda
     ports:
       - "4000:7000"
     volumes:
@@ -38,8 +37,17 @@ services:
       "-m", "/models/llama-2-7b-chat.Q5_K_M.gguf",
       "--port", "7000",
       "--host", "0.0.0.0",
-      "-n", "512"
+      "-n", "1024",
+      "--n-gpu-layers", "20",
+      "--ctx-size", "4096",
     ]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     networks:
       - app-network
 
