--- a/YouTube-Summarizer/pyproject.toml
+++ b/YouTube-Summarizer/pyproject.toml
@@ -14,6 +14,7 @@ accelerate = "^0.33.0"
 websockets = "^13.0"
 torch = "^2.4.1"
 huggingface-hub = "^0.24.7"
+pydub = "^0.25.1"
 
 
 [tool.poetry.group.backend.dependencies]
